--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Contact | MAKJICOLOR{% endblock %}
+{% block title %}Contact – Boutique de peinture MAKJICOLOR{% endblock %}
 {% block content %}
 
 <div class="contact-page"  style="background-image: url('{{ url_for('static', filename='img/pexels-shkrabaanthony-5493653.jpg') }}'); background-position: center; background-size: cover; background-repeat: no-repeat; background-attachment: fixed; width: 100%;">
