--- a/templates/fiche_produit.html
+++ b/templates/fiche_produit.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}{{ produit.nom }} | MAKJICOLOR{% endblock %}
+{% block title %}{{ produit.nom }} – Peinture et matériel professionnel | MAKJICOLOR{% endblock %}
 {% block content %}
 
 <div class="container fiche-produit">
