--- a/templates/histoire.html
+++ b/templates/histoire.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Présentation Boutique Peinture | MAKJICOLOR{% endblock %}
+{% block title %}Votre boutique spécialisée en peinture | MAKJICOLOR{% endblock %}
 {% block content %}
 
 <div class="histoire-container" style="background-image: url('{{ url_for('static', filename='img/vue-de-dessus-sur-pot-de-peinture.jpg') }}'); background-position: center; background-size: cover; background-repeat: no-repeat; background-attachment: fixed; width: 100%;">
