--- a/templates/portail.html
+++ b/templates/portail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Portail | MAKJICOLOR{% endblock %}
+{% block title %}Peinture bâtiment, décoration et matériel | MAKJICOLOR{% endblock %}
 {% block content %}
 
 <!-- Diaporama professionnel -->
