--- a/templates/prestations.html
+++ b/templates/prestations.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Nos Prestations | MAKJICOLOR{% endblock %}
+{% block title %}Prestations de peinture et conseils professionnels | MAKJICOLOR{% endblock %}
 {% block content %}
 
 <div class="prestations-page" style="background-image: url('{{ url_for('static', filename='img/decoration1.jpg') }}'); background-position: center; background-size: cover; background-repeat: no-repeat; background-attachment: fixed; width: 100%;">
