--- a/templates/mentions-legales.html
+++ b/templates/mentions-legales.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Mentions Légales | MAKJICOLOR{% endblock %}
+{% block title %}Mentions légales – Boutique de peinture MAKJICOLOR{% endblock %}
 {% block content %}
 <div class="legal-page"  style="background-image: url('{{ url_for('static', filename='img/pexels-shkrabaanthony-5493653.jpg') }}'); background-position: center; background-size: cover; background-repeat: no-repeat; background-attachment: fixed; width: 100%;">
   <div class="container">
