--- a/templates/panier.html
+++ b/templates/panier.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Panier | MAKJICOLOR{% endblock %}
+{% block title %}Catalogue de peintures et outils de peinture | MAKJICOLOR{% endblock %}
 {% block content %}
 
 <div class="cart-container">
