--- a/templates/produits.html
+++ b/templates/produits.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Nos Produits | MAKJICOLOR{% endblock %}
+{% block title %}Peintures et matériels de peinture professionnels | MAKJICOLOR{% endblock %}
 {% block content %}
 
 <div class="products-container" style="background-image: url('{{ url_for('static', filename='img/pexels-shkrabaanthony-5493653.jpg') }}'); background-position: center; background-size: cover; background-repeat: no-repeat; background-attachment: fixed; width: 100%;">
