--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Inscription | MAKJICOLOR{% endblock %}
+{% block title %}Inscription – Boutique de peinture MAKJICOLOR{% endblock %}
 {% block content %}
 
 <div class="auth-container" style="background-image: url('{{ url_for('static', filename='img/vue-de-dessus-sur-pot-de-peinture.jpg') }}'); background-position: center; background-size: cover; background-repeat: no-repeat; background-attachment: fixed; width: 100%;">
