--- a/templates/conditions-vente.html
+++ b/templates/conditions-vente.html
@@ -23,9 +23,9 @@
 
     <h2>4. Livraison</h2>
     <p>- Délai : 5 à 10 jours ouvrés après validation<br>
-    - France métropolitaine : gratuite<br>
-    - Europe : 15 €<br>
-    - Reste du monde : 30 €</p>
+    - Abidjan : 2 000 FCFA<br>
+    - Côte d’Ivoire : 6 000 FCFA<br>
+    - Reste du monde : 10 000 FCFA</p>
 
     <h2>5. Droit de rétractation</h2>
     <p>Conformément à l’article L.221-28 du Code de la consommation, **aucun droit de rétractation** n’est applicable aux œuvres d’art originales, personnalisées ou réalisées sur commande.</p>
