--- a/templates/support-client.html
+++ b/templates/support-client.html
@@ -15,14 +15,13 @@
 
       <div class="support-card">
         <h2><i class="fab fa-whatsapp"></i> Par WhatsApp</h2>
-        <p><a href="https://wa.me/33612345678">+33 6 12 34 56 78</a></p>
+        <p><a href="https://wa.me/2250711066021">+225 07 11 06 60 21</a></p>
         <p>Pour les commandes en cours ou questions urgentes</p>
       </div>
 
       <div class="support-card">
         <h2><i class="fas fa-map-marker-alt"></i> Atelier</h2>
-        <p>24 Rue des Artistes<br>75018 Paris</p>
-        <p>Sur rendez-vous uniquement</p>
+        <p>Cocody Avenue Kone Tiemoko Meylie</p>
       </div>
     </div>
 
