--- a/templates/base.html
+++ b/templates/base.html
@@ -88,14 +88,14 @@
 
   <footer class="site-footer" style="background: linear-gradient(90deg, hsla(279, 44%, 8%, 1) 0%, hsla(340, 14%, 13%, 1) 13%, hsla(16, 15%, 15%, 1) 18%, hsla(60, 20%, 1%, 1) 72%);">
   <div class="container" style="color: white;">
-    <div class="footer-grid" >
+    <div class="footer-grid">
       <!-- Colonne 1 : Logo & description -->
       <div class="footer-col">
         <a href="{{ url_for('main.portail') }}" class="footer-logo" style="color: white;">MAKJICOLOR</a>
         <p class="footer-slogan">La maison de la peinture et de la décoration.</p>
         <div class="footer-social">
           <a href="#" aria-label="Instagram" class="social-link"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#" aria-label="Facebook" class="social-link"><i class="fa-brands fa-facebook"></i></a>
+          <a href="www.facebook.com/p/Makji-Color-100063509376245/" aria-label="Facebook" class="social-link" ><i class="fa-brands fa-facebook"></i></a>
           <a href="#" aria-label="TikTok" class="social-link"><i class="fa-brands fa-tiktok"></i></a>
           <a href="#" aria-label="Snapchat" class="social-link"><i class="fa-brands fa-snapchat"></i></a>
         </div>
