--- a/templates/register.html
+++ b/templates/register.html
@@ -14,7 +14,7 @@
         <label for="email">Email 
         <input type="email" id="email" name="email" placeholder="Votre adresse email" required>
         <label for="numero">Telephone</label>
-        <input type="tel" id="numero" name="numero" placeholder="Numéro de Telephone" required>
+        <input type="tel" id="numero" name="numero" placeholder="Numéro de Telephone" minlength="6" maxlength="13" required>
       </div>
       <div class="form-group">
         <label for="password">Mot de passe</label>
